<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activity.Novo_Activity">

    <item
        android:id="@+id/menuPrincipal_Novo"
        android:icon="@android:drawable/ic_menu_add"
        app:showAsAction="always"
        android:title="@string/novo"/>

    <item
        android:id="@+id/menuPrincipal_Detalhes"
        android:icon="@android:drawable/ic_menu_info_details"
        app:showAsAction="always"
        android:title="@string/detalhes"/>

    <item
        android:id="@+id/menuPrincipal_Normal"
        android:icon="@android:drawable/ic_menu_view"
        app:showAsAction="always"
        android:visible="false"
        android:title="@string/normal"/>

    <item
        android:id="@+id/menuPrincipal_Configuracao"
        android:title="@string/configuracao"/>
</menu>