<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.samuscosta.contatudo.activity.Novo_Activity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="15sp"
        android:layout_marginLeft="15sp"
        android:layout_marginRight="15sp"
        android:paddingBottom="15sp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nome_contador"/>

        <EditText
            android:id="@+id/activityNovo_txtNome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="100"
            android:inputType="text"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:layout_marginBottom="10sp"
            android:text="@string/contador"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2.0">

            <TextView
                android:id="@+id/activityNovo_txtInicialLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:text="@string/valor_inicial" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:text="@string/valor_incremento" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2.0">

            <EditText
                android:id="@+id/activityNovo_txtInicial"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="15"
                android:layout_weight="1.0"
                android:inputType="number"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:text="@string/valor_0"/>

            <EditText
                android:id="@+id/activityNovo_txtIncremento"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="15"
                android:layout_weight="1.0"
                android:inputType="number"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:text="@string/valor_1"/>
        </LinearLayout>

    </LinearLayout>
</ScrollView>