<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.samuscosta.contatudo.activity.Detalhe_Activity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15sp"
        android:layout_marginLeft="15sp"
        android:layout_marginRight="15sp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/activityDetalhe_txtNome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="30sp"
            android:text="@string/texto_string"
            android:textSize="25sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/data_hora_string"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"/>

        <TextView
            android:id="@+id/activityDetalhe_txtDataHora"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="30sp"
            android:text="@string/texto_string"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"/>


        <TextView
            android:id="@+id/activityDetalhe_txtAtual"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="10sp"
            android:text="@string/valor_atual_string"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"/>

        <TextView
            android:id="@+id/activityDetalhe_txtIncremento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="10sp"
            android:text="@string/valor_incremento_string"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"/>

    </LinearLayout>
</ScrollView>
