<?xml version="1.0" encoding="utf-8"?>


<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.samuscosta.contatudo.activity.Configuracao_Activity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15sp"
        android:layout_marginLeft="15sp"
        android:layout_marginRight="15sp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/numero_wbc"
                android:textColor="@android:color/black"/>

            <EditText
                android:id="@+id/activityConfiguracao_edtWbc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/valor_4000"
                android:inputType="number"
                android:maxLength="6"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/tela_ligada"
                android:textColor="@android:color/black"/>

            <Switch
                android:id="@+id/activityConfiguracao_swtTelaLigada"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"/>

        </LinearLayout>

    </LinearLayout>

</ScrollView>
